--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -20,6 +20,7 @@ h3, h2
   font-weight: normal
 
 #content
+  position: relative
   background: #231f20
   width: 100%
   max-width: 800px
@@ -37,7 +38,7 @@ h3, h2
     width: 100%
     position: absolute
     left: 0
-    h2, .num, .last, .start_over
+    h2, .num, .last, .social button
       opacity: 0
       -webkit-transform: scale(0.2)
       -ms-transform: scale(0.2)
@@ -76,7 +77,7 @@ h3, h2
     font-family: ProximaNovaCond-Semibold
     border: none
     &::placeholder
-      color: #333333
+      color: #666
     &:focus
       &::placeholder
         color: transparent
@@ -99,6 +100,17 @@ h3, h2
       box-shadow: 8px 8px 0px white
       background: #cb262a
       color: white
+
+#content .social
+  bottom: 40px
+  width: 100%
+  height: 50px
+  text-align: center
+  button
+    display: inline
+    max-width: 180px
+    margin: 10px
+    width: 30%
 
 .big_j
   position: absolute
@@ -138,7 +150,7 @@ h3, h2
 #content.done
   .result_container
     display: block
-  h2, .num, .last, button.start_over
+  h2, .num, .last, .social button
     transition:all 0.8s ease
     @include animation('fade-in 1s forwards')
     -webkit-transform: scale(1)
@@ -185,6 +197,25 @@ h3, h2
       padding-bottom: 20px
     h2
       font-size: 20px
+    .num, .last
+      height: 40px
+      font-size: 40px
+    .name_container
+      height: 90px
+    input
+      font-size: 25px
+    &.done
+      .name_form
+        height: 135px
+  #content .social
+    width: 100%
+    text-align: center
+    button
+      display: inline
+      width: 100%
+      margin-bottom: 4px
+      // margin: 10px
+      // width: 30%
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
   .foo
