--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -207,6 +207,9 @@ h3, h2
     &.done
       .name_form
         height: 135px
+    .name_container.small
+      .num, .last
+        font-size: 28px
   #content .social
     width: 100%
     text-align: center
