--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -60,9 +60,13 @@ h3, h2
     letter-spacing: 0.85px
     margin-top: 20px
   div.num, div.last
-    color: #cb262a
+    color: #15EDE7
   input, .name_container
-    height: 180px
+    height: 150px
+  .name_container
+    line-height: 40px
+  button.submit
+    margin-top: 25px
   .num, .last
     height: 52px
   input, .num, .last
@@ -70,9 +74,9 @@ h3, h2
     outline: none
     text-align: center
     width: 100%
-    padding-top: 5px
+    padding-top: 20px
     color: white
-    // color: #cb262a
+    // color: #15EDE7
     font-size: 60px
     font-family: ProximaNovaCond-Semibold
     border: none
@@ -90,15 +94,15 @@ h3, h2
     text-align: center
     margin: -5px auto
     display: block
-    box-shadow: 8px 8px 0px #cb262a
+    box-shadow: 5px 5px 0px #15EDE7
     background: white
     outline: none
     border: 1px solid #231f20
     width: auto
     padding: 5px 10px
     &:hover
-      box-shadow: 8px 8px 0px white
-      background: #cb262a
+      box-shadow: 5px 5px 0px white
+      background: #15EDE7
       color: white
 
 #content .social
@@ -202,6 +206,7 @@ h3, h2
       font-size: 40px
     .name_container
       height: 90px
+      line-height: 15px
     input
       font-size: 25px
     &.done
